<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
    android:orientation="vertical"
    tools:context=".userProfile.userEditActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintBaseline_toBaselineOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r2"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_outline"
                android:id="@+id/e">

                <TextView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:textAllCaps="true"
                    android:textColor="#050505"
                    android:textSize="30dp"
                    android:typeface="monospace"

                    android:textStyle="bold" />

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/e"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:paddingLeft="14dp"
                android:text="Important to fill all information**"
                android:textAllCaps="true"
                android:textColor="#050505"
                android:textSize="10dp"

                android:textStyle="bold"
                android:typeface="monospace" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:id="@+id/r1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/profilePic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_profile"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/r1"
            android:background="@drawable/tableoutline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp">

                <EditText
                    android:id="@+id/firstNameAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/firstName"
                    android:inputType="textCapWords" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp">

                <EditText
                    android:id="@+id/lastNameAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="92dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/bio"
                    android:inputType="textCapWords"
                    android:textAllCaps="true"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/createAccoutAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="PO S  T     E D I  T   S"
        android:textColor="@color/cardview_light_background"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>